crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_bool.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: bool) -> bool { !a }\n    pub fn bitand(a: bool, b: bool) -> bool { a & b }\n    pub fn bitor(a: bool, b: bool) -> bool { a | b }\n    pub fn bitxor(a: bool, b: bool) -> bool { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i1 @not(i1 %0) {
body:
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %not = xor i1 %a1, true
  ret i1 %not
}

define i1 @bitand(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %bit_and = and i1 %a1, %b2
  ret i1 %bit_and
}

define i1 @bitor(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %bit_or = or i1 %a1, %b2
  ret i1 %bit_or
}

define i1 @bitxor(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %bit_xor = xor i1 %a1, %b2
  ret i1 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
