crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_i128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: i128) -> i128 { !a }\n    pub fn bitand(a: i128, b: i128) -> i128 { a & b }\n    pub fn bitor(a: i128, b: i128) -> i128 { a | b }\n    pub fn bitxor(a: i128, b: i128) -> i128 { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i128 @not(i128 %0) {
body:
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %not = xor i128 %a1, -1
  ret i128 %not
}

define i128 @bitand(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %bit_and = and i128 %a1, %b2
  ret i128 %bit_and
}

define i128 @bitor(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %bit_or = or i128 %a1, %b2
  ret i128 %bit_or
}

define i128 @bitxor(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %bit_xor = xor i128 %a1, %b2
  ret i128 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
