crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_i64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: i64) -> i64 { !a }\n    pub fn bitand(a: i64, b: i64) -> i64 { a & b }\n    pub fn bitor(a: i64, b: i64) -> i64 { a | b }\n    pub fn bitxor(a: i64, b: i64) -> i64 { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i64 @not(i64 %0) {
body:
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %not = xor i64 %a1, -1
  ret i64 %not
}

define i64 @bitand(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %bit_and = and i64 %a1, %b2
  ret i64 %bit_and
}

define i64 @bitor(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %bit_or = or i64 %a1, %b2
  ret i64 %bit_or
}

define i64 @bitxor(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %bit_xor = xor i64 %a1, %b2
  ret i64 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
