crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_i8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: i8) -> i8 { !a }\n    pub fn bitand(a: i8, b: i8) -> i8 { a & b }\n    pub fn bitor(a: i8, b: i8) -> i8 { a | b }\n    pub fn bitxor(a: i8, b: i8) -> i8 { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i8 @not(i8 %0) {
body:
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %not = xor i8 %a1, -1
  ret i8 %not
}

define i8 @bitand(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %bit_and = and i8 %a1, %b2
  ret i8 %bit_and
}

define i8 @bitor(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %bit_or = or i8 %a1, %b2
  ret i8 %bit_or
}

define i8 @bitxor(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %bit_xor = xor i8 %a1, %b2
  ret i8 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
