crates/mun_codegen/src/snapshots/mun_codegen__test__compare_op_bool.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn equals(a: bool, b: bool) -> bool { a == b }\n    pub fn not_equal(a: bool, b: bool) -> bool { a != b}\n    pub fn less(a: bool, b: bool) -> bool { a < b }\n    pub fn less_equal(a: bool, b: bool) -> bool { a <= b }\n    pub fn greater(a: bool, b: bool) -> bool { a > b }\n    pub fn greater_equal(a: bool, b: bool) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i1 @equals(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %eq = icmp eq i1 %a1, %b2
  ret i1 %eq
}

define i1 @not_equal(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %neq = icmp ne i1 %a1, %b2
  ret i1 %neq
}

define i1 @less(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %less = icmp ult i1 %a1, %b2
  ret i1 %less
}

define i1 @less_equal(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %lesseq = icmp ule i1 %a1, %b2
  ret i1 %lesseq
}

define i1 @greater(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %greater = icmp ugt i1 %a1, %b2
  ret i1 %greater
}

define i1 @greater_equal(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %greatereq = icmp uge i1 %a1, %b2
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
