crates/mun_codegen/src/snapshots/mun_codegen__test__compare_op_f32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn equals(a: f32, b: f32) -> bool { a == b }\n    pub fn not_equal(a: f32, b: f32) -> bool { a != b}\n    pub fn less(a: f32, b: f32) -> bool { a < b }\n    pub fn less_equal(a: f32, b: f32) -> bool { a <= b }\n    pub fn greater(a: f32, b: f32) -> bool { a > b }\n    pub fn greater_equal(a: f32, b: f32) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [2 x ptr]

define i1 @equals(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %eq = fcmp oeq float %a1, %b2
  ret i1 %eq
}

define i1 @not_equal(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %neq = fcmp one float %a1, %b2
  ret i1 %neq
}

define i1 @less(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %less = fcmp olt float %a1, %b2
  ret i1 %less
}

define i1 @less_equal(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %lesseq = fcmp ole float %a1, %b2
  ret i1 %lesseq
}

define i1 @greater(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %greater = fcmp ogt float %a1, %b2
  ret i1 %greater
}

define i1 @greater_equal(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %greatereq = fcmp oge float %a1, %b2
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
